use qos as enum in openapi spec and adjust code accordingly
